[project]
name = "pr-review-agent"
version = "0.1.0"
description = "无框架 Agent：从零搭建的 PR 代码审查系统"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openai>=1.0",
    "rich>=13.0",
    "click>=8.0",
    "python-dotenv>=1.0",
]

[project.scripts]
pr-review = "pr_review_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
